--- a/LinkManager/LinkManager.csproj
+++ b/LinkManager/LinkManager.csproj
@@ -29,26 +29,31 @@
     <DefineConstants>TRACE</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2022|AnyCPU' ">
     <OutputPath>bin\R2022\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2023|AnyCPU' ">
-		<OutputPath>bin\R2022\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-		<AssemblyName>$(AssemblyName)</AssemblyName>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2024|AnyCPU' ">
-		<OutputPath>bin\R2022\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-		<AssemblyName>$(AssemblyName)</AssemblyName>
-	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2023|AnyCPU' ">
+    <OutputPath>bin\R2023\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <AssemblyName>$(AssemblyName)</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2024|AnyCPU' ">
+    <OutputPath>bin\R2024\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <AssemblyName>$(AssemblyName)</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -60,9 +65,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application - Копировать.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="LinkManager.cs" />
     <Compile Include="Models\LinkModel.cs" />
+    <Compile Include="Models\NewDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LinkService.cs" />
     <Compile Include="Services\LogService.cs" />
@@ -87,7 +94,7 @@
         </PackageReference>
       </ItemGroup>
     </When>
-	<When Condition=" '$(Configuration)'=='R2023' ">
+    <When Condition=" '$(Configuration)'=='R2023' ">
       <ItemGroup>
         <PackageReference Include="Revit_API_x64">
           <Version>2023.0.0</Version>
@@ -95,14 +102,14 @@
         </PackageReference>
       </ItemGroup>
     </When>
-	  <When Condition=" '$(Configuration)'=='R2024' ">
-		  <ItemGroup>
-			  <PackageReference Include="Revit_API_x64">
-				  <Version>2024.0.0</Version>
-				  <ExcludeAssets>runtime</ExcludeAssets>
-			  </PackageReference>
-		  </ItemGroup>
-	  </When>
+    <When Condition=" '$(Configuration)'=='R2024' ">
+      <ItemGroup>
+        <PackageReference Include="Revit_API_x64">
+          <Version>2024.0.0</Version>
+          <ExcludeAssets>runtime</ExcludeAssets>
+        </PackageReference>
+      </ItemGroup>
+    </When>
   </Choose>
   <ItemGroup>
     <None Include="UNI.LinkManager.addin" />
