--- a/RevitExport/RevitExport.csproj
+++ b/RevitExport/RevitExport.csproj
@@ -19,35 +19,35 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+	  <DefineConstants>TRACE;DEBUG;R2021</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2021|AnyCPU' ">
     <OutputPath>bin\R2021\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>R2021</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2022|AnyCPU' ">
     <OutputPath>bin\R2022\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>R2022</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2023|AnyCPU' ">
     <OutputPath>bin\R2023\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>R2023</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'R2024|AnyCPU' ">
     <OutputPath>bin\R2024\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>R2024</DefineConstants>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AssemblyName>$(AssemblyName)</AssemblyName>
     <PlatformTarget>x64</PlatformTarget>
@@ -82,15 +82,14 @@
     </Compile>
   </ItemGroup>
   <Choose>
-    <When Condition=" '$(Configuration)'=='R2021' or '$(Configuration)'=='Debug' ">
-      <ItemGroup>
+	  <When Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU' Or '$(Configuration)|$(Platform)' == 'R2021|AnyCPU'">      <ItemGroup>
         <PackageReference Include="Revit_API_x64">
           <Version>2021.0.0</Version>
           <ExcludeAssets>runtime</ExcludeAssets>
         </PackageReference>
       </ItemGroup>
     </When>
-    <When Condition=" '$(Configuration)'=='R2022' ">
+	  <When Condition="'$(Configuration)|$(Platform)' == 'R2022|AnyCPU'">
       <ItemGroup>
         <PackageReference Include="Revit_API_x64">
           <Version>2022.0.0</Version>
@@ -98,7 +97,7 @@
         </PackageReference>
       </ItemGroup>
     </When>
-    <When Condition=" '$(Configuration)'=='R2023' ">
+	  <When Condition="'$(Configuration)|$(Platform)' == 'R2023|AnyCPU'">
       <ItemGroup>
         <PackageReference Include="Revit_API_x64">
           <Version>2023.0.0</Version>
@@ -106,7 +105,7 @@
         </PackageReference>
       </ItemGroup>
     </When>
-    <When Condition=" '$(Configuration)'=='R2024' ">
+	  <When Condition="'$(Configuration)|$(Platform)' == 'R2024|AnyCPU'">
       <ItemGroup>
         <PackageReference Include="Revit_API_x64">
           <Version>2024.0.0</Version>
